5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1734_2496.log
== TEST (2019-05-09 18:07:48) 
-- CODE:
n = int(input("digite o numero: "))
soma = 0
while (n != -1):
	soma = soma + n
	print(soma)
	n = int(input"digite o numero")
	
	
-- ERROR:
File "XXXX", line 6
    n = int(input"digite o numero")
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:08:02) 
-- CODE:
n = int(input("digite o numero: "))
soma = 0
while (n != -1):
	soma = soma + n
	print(soma)
	n = int(input("digite o numero"))
	
	
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:12:22) 
-- CODE:
n = int(input("digite o numero: "))
soma = 0
if(n!=-1)
	while (n != -1):
		soma = soma + n
else:
	print(soma)
-- ERROR:
File "XXXX", line 3
    if(n!=-1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:12:29) 
-- CODE:
n = int(input("digite o numero: "))
soma = 0
if(n!=-1):
	while (n != -1):
		soma = soma + n
else:
	print(soma)
-- ERROR:
File "XXXX", line 3
    if(n!=-1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:12:56) 
-- CODE:
n = int(input("digite o numero: "))
soma = 0
if(n!=-1):
	while (n != -1):
		soma = soma + n
else:
	print(soma)
-- ERROR:
File "XXXX", line 3
    if(n!=-1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:13:18) 
-- CODE:
n = int(input("digite o numero: "))
soma = 0
if(n!=-1):
	while (n != -1):
		soma = soma + n
		n = int(input("digite o numero: "))
else:
	print(soma)
-- ERROR:
File "XXXX", line 3
    if(n!=-1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:13:52) 
-- CODE:
n = int(input("digite o numero: "))
soma = 0
while (n != -1):
	soma = soma + n
	n = int(input("digite o numero: "))
print(soma)

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 18:14:00) 
-- CODE:
n = int(input("digite o numero: "))
soma = 0
while (n != -1):
	soma = soma + n
	n = int(input("digite o numero: "))
print(soma)

-- EXECUTION TIME:
0.317299
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 18:19:02) 
-- CODE:
n = int(input("digite o numero: "))
soma = 0
if(n!=-1):
	while (n != -1):
		soma = soma + n
else:
	print(soma)
-- EXECUTION TIME:
367.487
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 18:23:10) 
-- CODE:
n = int(input("digite o numero: "))
soma = 0
while (n != -1):
	soma = soma + n
	n = int(input("digite o numero: "))
print(soma)

-- EXECUTION TIME:
0.121007
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
